...
    <string name="progressDialogTripActivity">Подождите, операция выполняется…</string>
    <string name="hasTransfers">Есть пересадки</string>
    <string name="noTransfers">Без пересадок</string>
    <string name="durationComment">Время в пути</string>
    <string name="priceLinks">Цены</string>
    <string name="buttonPrice">Купить</string>
    <string name="errorOneAdultRequired">Необходим как минимум один взрослый пассажир</string>
    <string name="errorOneTooManyPassengers">Число пассажиров не должно превышать 8</string>
    <string name="errorInfantsMoreThanAdults">Младенцев не должно быть больше, чем взрослых</string>
    <string name="errorDateOutbound">Выберите дату отправления\n(ДД/ММ/ГГГГ)</string>
    <string name="errorDateInbound">Выберите дату возвращения\n(ДД/ММ/ГГГГ)</string>
    <string name="errorDateOutboundAfterDateIbound">Дата возвращения должна быть после даты отправления</string>
    <string name="errorDateInPast">Выберите дату не раньше сегодняшней</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="ticketsError">Билеты не найдены</string>
    <string name="cityError">Город не найден</string>
    <string name="responseError">Нет ответа</string>
    <string name="errorTicketsNotFound">Ни одного билета не найдено. \nПопробуйте ввести другие параметры поиска.</string>
    <string name="spinnerSortFiltersMinPrice">По цене</string>
...
    <string name="goToSignIn"><u>Перейти ко входу</u></string>
    <string name="loginTextSearchHistory">Чтобы просматривать сохраненную историю войдите с помощью Google Account</string>
    <string name="loginTextBookmarks">Чтобы иметь возможность добавлять закладки войдите с помощью Google Account</string>
    <string name="signInSettings">Войти в Google Account</string>
    <string name="signOutSettings">Выйти из Google Account</string>
    <string name="successfullySignedOut">Вы вышли из аккаунта</string>
    <string name="errorEmptyOrigin">Введите город отправления</string>
    <string name="errorEmptyDestination">Введите город назначения</string>
</resources>

