...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/cityFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintCityFrom"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/cityTo"
            android:paddingStart="10dp"
            app:layout_constraintLeft_toLeftOf="@id/firstColGuideline"
            app:layout_constraintRight_toRightOf="@id/zero_col_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline" />

        <android.support.constraint.Group
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintCityTo"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/adultsCount"
            android:paddingStart="10dp"
            app:layout_constraintLeft_toLeftOf="@id/first_col_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline" />

        <EditText
...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/human_handsdown"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:nextFocusDown="@id/childrenCount"
            android:text="@string/AdultCountFill"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@id/first_col_guideline"
            app:layout_constraintRight_toRightOf="@id/second_col_guideline"
            app:layout_constraintTop_toBottomOf="@id/cabinClass" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/child"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:nextFocusDown="@id/infantsCount"
            android:text="@string/ChildrenCountFill"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@id/second_col_guideline"
            app:layout_constraintRight_toRightOf="@id/third_col_guideline"
            app:layout_constraintTop_toTopOf="@id/adultsCount" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baby_buggy"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:nextFocusDown="@id/dateFrom"
            android:text="@string/ChildrenCountFill"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@id/third_col_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/adultsCount" />

...
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/adultsCount"
            app:layout_constraintLeft_toLeftOf="@id/firstColGuideline"
            app:layout_constraintTop_toTopOf="@id/adultsCount" />

        <Spinner
            android:id="@+id/routeType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_background"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/calendar_month_outline"
            android:hint="@string/hintDateFormat"
            android:inputType="date"
            android:maxLines="1"
            android:nextFocusDown="@id/dateTo"
            android:paddingStart="5dp"
            app:layout_constraintLeft_toLeftOf="@id/firstColGuideline"
            app:layout_constraintRight_toRightOf="@id/secondColGuideline"
            app:layout_constraintTop_toBottomOf="@id/adultsCount" />

        <EditText
...
            android:paddingStart="5dp"
            app:layout_constraintLeft_toLeftOf="@id/secondColGuideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/dateFrom" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:alpha=".75"
            android:background="@drawable/button_background"
...
